WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119424
REGRESSION(
r147019
): Page has extra space
https://bugs.webkit.org/show_bug.cgi?id=119424
Summary
REGRESSION(r147019): Page has extra space
Kent Tamura
Reported
2013-08-01 19:32:51 PDT
1. Open
http://jsfiddle.net/onlydimon/PGy5W/15/
2. Click right-most "First level" 3. Click one of "Second level" Expected: "Third level" blocks are shown, and page width is unchanged. Actual: "Third level" blocks are shown, the page gets extra space at the right side, and horizontal scroll bar is shown.
Attachments
Patch
(2.02 KB, patch)
2013-08-06 13:24 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2013-08-01 19:33:18 PDT
Imported from crbug.com/266288
Robert Hogan
Comment 2
2013-08-06 13:24:36 PDT
Created
attachment 208213
[details]
Patch
Dave Hyatt
Comment 3
2013-08-07 13:07:23 PDT
Comment on
attachment 208213
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2013-08-08 11:12:13 PDT
Comment on
attachment 208213
[details]
Patch Clearing flags on attachment: 208213 Committed
r153832
: <
http://trac.webkit.org/changeset/153832
>
WebKit Commit Bot
Comment 5
2013-08-08 11:12:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug